fra-6 updated index file

--- a/asciidocs/index.adoc
+++ b/asciidocs/index.adoc
@@ -29,3 +29,8 @@ ifdef::backend-html5[]
 == Projektbericht
 
 <<projekt-bericht.adoc#, Projektbericht>>
+
+== Presentation
+
+<<presentation.adoc#, Presentation>>
+
