--- a/docs/asciidocs/presentation.adoc
+++ b/docs/asciidocs/presentation.adoc
@@ -10,6 +10,11 @@ Franklyn ist eine Applikation, die die Bildschirme der SchülerInnen "überwacht
 Die ProfessorInnen können somit sehen, wenn jemand Hilfe braucht bzw. für Chancengleichheit sorgen, indem sie die Bildschirme
 der SchülerInnen überwachen.
 
+== Use Case Diagram
+
+image:images/useCase.png[]
+
+
 == Unsere Aufgaben
 .Aufgaben
 |===
