--- a/docs/asciidocs/index.adoc
+++ b/docs/asciidocs/index.adoc
@@ -18,6 +18,6 @@ ifdef::backend-html5[]
 <<presentation.adoc#, Presentation>>
 
 
-<<minutes-of-meeting.adoc#, Protocols>>
+<<minutes-of-meeting.adoc#, Protocol>>
 
 
