fra-4 system specification

--- a/docs/asciidocs/index.adoc
+++ b/docs/asciidocs/index.adoc
@@ -15,7 +15,7 @@ ifdef::backend-html5[]
 
 == Presentation
 
-<<presentation.adoc#, Presentation>>
+<<system-specification.adoc#, System Specification>>
 
 == Protocol
 
