fra-6 maintenance doku

--- a/docs/asciidocs/stop-restart-franklyn.adoc
+++ b/docs/asciidocs/stop-restart-franklyn.adoc
@@ -1,12 +1,9 @@
 = AsciiDoc Article Title
-Firstname Lastname <author@asciidoctor.org>
+Melcher Tamara und Tran Michael - Franklyn maintenance
 3.0, July 29, 2022: AsciiDoc article template
 :toc:
 :icons: font
 :url-quickref: https://docs.asciidoctor.org/asciidoc/latest/syntax-quick-reference/
-
-Content entered directly below the header but before the first section heading is called the preamble.
-
 == Stop and Restart Franklyn
 ```bash
 # Connect to the VM
