fra-4 add mom 2022-03-29

--- a/docs/asciidocs/minutes-of-meeting.adoc
+++ b/docs/asciidocs/minutes-of-meeting.adoc
@@ -525,3 +525,49 @@ backend -right- screenshots
 * Anmeldung
 ** Frontend schickt Anmeldedaten an Server -> prüft Anmeldedaten
 ** Methode in server -> app -> controller -> services
+
+
+
+.Teilnehmer
+|===
+|anwesend | |
+
+|Vorname
+|Nachname
+|Klasse
+
+|
+| Prof. Stuetz
+|
+
+|
+| Prof. Bucek
+|
+
+| Tamara
+| Melcher
+| 4AHIF
+
+| Michael
+| Tran
+| 4AHIF
+
+|===
+
+=== Was wurde besprochen?
+
+* `Form` -> `SchoolClass` umbenannt
+* Assoziative Tabelle
+** `Exam` und `SchoolClass`
+** `Examiner` und `Exam` machen
+* `Examinee` soll auf die `Exam` referenziert werden
+* Screenshot
+** Examinee-Referenz hinzufügen
+** `screenshotNumber` -> `runningNo` ändern
+* Wie funktioniert der `ImageCompressor`?
+** Vorgang `ImageCompressor` Bild komprimieren
+* Resolution einmalig in `Exam` initialisiert werden
+
+=== Vereinbarung
+* Datenmodell erstellen
+* reaktiv machen (jdbc der nicht blockiert, ...)
