fra-4 add mom 2022-03-29

--- a/docs/asciidocs/minutes-of-meeting.adoc
+++ b/docs/asciidocs/minutes-of-meeting.adoc
@@ -526,6 +526,9 @@ backend -right- screenshots
 ** Frontend schickt Anmeldedaten an Server -> prüft Anmeldedaten
 ** Methode in server -> app -> controller -> services
 
+== 2022-03-29
+
+Anwesend Prof. Stuetz, Prof. Bucek, Tamara Melcher, Michael Tran
 
 
 .Teilnehmer
@@ -571,3 +574,5 @@ backend -right- screenshots
 === Vereinbarung
 * Datenmodell erstellen
 * reaktiv machen (jdbc der nicht blockiert, ...)
+
+
