fra-6 update documents

--- a/docs/asciidocs/index.adoc
+++ b/docs/asciidocs/index.adoc
@@ -25,5 +25,8 @@ ifdef::backend-html5[]
 
 <<stop-restart-franklyn.adoc#, How to stop and restart Franklyn>>
 
+== Slides
+
+https://htl-leonding-project.github.io/franklyn-quarkus/slides/#/
 
 
