--- a/docs/asciidocs/system-specification.adoc
+++ b/docs/asciidocs/system-specification.adoc
@@ -34,6 +34,14 @@ include::plantuml/classDiagram.puml[]
 include::plantuml/system-architecture.puml[]
 ----
 
+== Sachbestandsbericht
+
+[plantuml]
+----
+include::plantuml/sachstandsbericht.puml[]
+----
+
+
 == Unsere Aufgaben
 .Aufgaben
 |===
