--- a/docs/slides/index.adoc
+++ b/docs/slides/index.adoc
@@ -1,11 +1,8 @@
 = Franklyn-Quarkus: Franklyn 2 reimplementiert in Quarkus
 Melcher Tamara, Tran Michael
-1.0, 2022-04-14
-ifndef::sourcedir[:sourcedir: ../src/main/java]
-ifndef::imagesdir[:imagesdir: images]
-ifndef::backend[:backend: html5]
+:imagesdir: images
+:notitle:
 :customcss: styles.css
-:icons: font
 
 == Ausgangslage
 
