--- a/docs/slides/index.adoc
+++ b/docs/slides/index.adoc
@@ -1,8 +1,11 @@
+:customcss: styles.css
+
 = Franklyn-Quarkus: Franklyn 2 reimplementiert in Quarkus
 Melcher Tamara, Tran Michael
-:imagesdir: images
-:notitle:
-:customcss: styles.css
+ifndef::sourcedir[:sourcedir: ../src/main/java]
+ifndef::imagesdir[:imagesdir: images]
+ifndef::backend[:backend: html5]
+:icons: font
 
 == Ausgangslage
 
