--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -15,20 +15,20 @@ ifdef::backend-html5[]
 
 == How-To
 
-<<HowTo.adoc#, How-To>>
+<<./asciidocs/HowTo.adoc#, How-To>>
 
 
 == System Specification
 
-<<system-specification.adoc#, System Specification>>
+<<./asciidocs/system-specification.adoc#, System Specification>>
 
 == Protocol
 
-<<minutes-of-meeting.adoc#, Minutes of Meeting>>
+<<./asciidocs/minutes-of-meeting.adoc#, Minutes of Meeting>>
 
 == Franklyn maintenance
 
-<<stop-restart-franklyn.adoc#, How to stop and restart Franklyn>>
+<<./asciidocs/stop-restart-franklyn.adoc#, How to stop and restart Franklyn>>
 
 == Slides
 
