--- a/docs/slides/index.adoc
+++ b/docs/slides/index.adoc
@@ -3,7 +3,7 @@
 = Franklyn-Quarkus: Franklyn 2 reimplementiert in Quarkus
 Melcher Tamara, Tran Michael
 ifndef::sourcedir[:sourcedir: ../src/main/java]
-ifndef::imagesdir[:imagesdir: images]
+ifndef::imagesdir[:imagesdir: ../images]
 ifndef::backend[:backend: html5]
 :icons: font
 
