fra-14 modify slides

--- a/docs/slides/index.adoc
+++ b/docs/slides/index.adoc
@@ -1,8 +1,8 @@
 :customcss: styles.css
-
-= Franklyn-Quarkus: Franklyn 2 reimplementiert in Quarkus
-Melcher Tamara, Tran Michael
 ifndef::imagesdir[:imagesdir: ./images]
+
+== Franklyn-Quarkus: Franklyn 2 reimplementiert in Quarkus
+Melcher Tamara, Tran Michael
 
 == Ausgangslage
 
