--- a/docs/gh-pages/index.adoc
+++ b/docs/gh-pages/index.adoc
@@ -24,7 +24,7 @@ Franklyn2 wurde mit Node.js implementiert und besitzt ein MongoDB im Hintergrund
 
 === Probleme
 image::problems2.jpg[background, size=cover]
-* Bei Node.js gibt es sehr viele Libraries mit unterschiedlichen Maintainer. D.h. beim Updaten muss die Funktionalität intensiv überprüft werden.
+* Bei Node.js gibt es sehr viele Libraries mit unterschiedlichen Maintainer. D.h. beim Updaten dieser müssen die Funktionen genau überprüft werden.
 * MongoDB ist eine nicht relationale Datenbank -> Unstrukturierte Speicherung von Daten
 
 == Unsere Aufgabe
