--- a/docs/asciidocs/HowTo.adoc
+++ b/docs/asciidocs/HowTo.adoc
@@ -1,11 +1,11 @@
-= How-To Start
+= How-To Start for Development
 Melcher Tamara, Tran Michael
 22. Juli 2022
 :toc:
 :icons: font
 :url-quickref: https://docs.asciidoctor.org/asciidoc/latest/syntax-quick-reference/
 
-== Start the server(backend) first
+== Start the backend first
 
 * open a terminal in `backend`-project and execute:
 
@@ -13,9 +13,10 @@ Melcher Tamara, Tran Michael
 
 == Start the frontend
 
-* open a terminal in `frontend`-project and execute:
+* open a terminal in `franklyn-frontend`-project and execute:
 
-`./mvnw clean quarkus:dev`
+`npm i --force`
+`ng serve --open`
 
-* after that open http://localhost:8090/client/login and log yourself in
+
 
