--- a/docs/asciidocs/HowTo.adoc
+++ b/docs/asciidocs/HowTo.adoc
@@ -9,14 +9,21 @@ Melcher Tamara, Tran Michael
 
 * open a terminal in `backend`-project and execute:
 
-`./mvnw clean quarkus:dev`
+[source, shell]
+----
+./mvnw clean quarkus:dev
+----
 
 == Start the frontend
 
 * open a terminal in `franklyn-frontend`-project and execute:
 
-`npm i --force`
-`ng serve --open`
+[source, shell]
+----
+npm i --force
+ng serve --open
+----
+
 
 
 
